[package]
name = "orchestra"
version = "0.0.2"
authors = ["Alexandre Péré <alexandre.pere@protonmail.com>"]

[dependencies]
log = "0.3"
pretty_logger = "0.1"
actix = "0.7"
actix-web = "0.7"
handlebars = "1.0"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
regex = "1"
futures = "0.1"
clap="2.31"
yaml-rust="0.4"
rust-crypto = "0.2"
uuid = { version = "0.6", features = ["v4"] }

[lib]
name = "liborchestra"
path = "src/lib/mod.rs"

[[bin]]
name = "orchestra"
path = "src/bin/orchestra/main.rs"

[[bin]]
name = "expegit"
path = "src/bin/expegit/main.rs"

[[bin]]
name = "runaway"
path = "src/bin/runaway/main.rs"
