[workspace]
members = [
    "liborchestra",
    #"expegit-cli",
    "runaway-cli",
    #"orchestra-cli",
    "liborchestra-derive",
    "remote-leak"]

[replace]
"liborchestra:0.0.2" = { path = "liborchestra"}
#"expegit-cli:0.0.2" = { path = "expegit-cli"}
"runaway-cli:0.0.2" = { path = "runaway-cli"}
#"orchestra-cli:0.0.2" = { path = "orchestra-cli"}
"liborchestra-derive:0.0.2" = {path = "liborchestra-derive"}
"remote-leak:0.0.2" = {path = "remote-leak"}
"ssh2:0.3.3" = { path = "ssh2-rs"}
