[package]
name = "liborchestra"
version = "0.0.2"
authors = ["Alexandre Péré <alexandre.pere@protonmail.com>"]

[dependencies]
log = "0.3"
pretty_logger = "0.1"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
regex = "1"
futures = "0.1"
yaml-rust="0.4"
rust-crypto = "0.2"
uuid = { version = "0.6", features = ["v4"] }
rpassword = "0.0.4"

[lib]
name="liborchestra"
path="src/lib/mod.rs"
