[package]
name = "liborchestra"
version = "0.2.0"
authors = ["Alexandre Péré <alexandre.pere@protonmail.com>"]
edition = "2018"

[dependencies]
log = "0.3"
env_logger = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
regex = "1"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] } 
yaml-rust="0.4"
rust-crypto = "0.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
rpassword = "0.0.4"
ssh2 = "0.3.3"
dirs = "1.0"
chashmap = "2.2.2"
url = "1.7.2"
git2 = {version = "0.8"}
crossbeam = "0.7.1"
typetag = "0.1"
tar = "0.4.26"
ignore = "0.4.7"
fasthash = "0.4.0"
walkdir = "2.2.7"
shells = "0.2"

[lib]
name="liborchestra"
path="src/lib/mod.rs"