[package]
name = "librunaway"
version = "0.3.1"
authors = ["Alexandre Péré <alexandre.pere@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
regex = "1"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] } 
yaml-rust="0.4"
rust-crypto = "0.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
rpassword = "0.0.4"
ssh2 = "0.3.3"
shells = "0.2.0"
dirs = "1.0"
url = "1.7.2"
git2 = {version = "0.8"}
crossbeam = "0.7.1"
tar = "0.4.26"
sha-1 = "0.8.1"
walkdir = "2.2.7"
libc = "0.2"
globset = "0.4.4"
tracing = "0.1.10"
tracing-subscriber = "0.1.6"
tracing-attributes = "0.1.5"
tracing-futures = {version = "0.1.0", features=["futures-preview"]}
derivative = "1.0.3"
arrayvec = "0.5.1"
lazy_static = "1.4.0"

[lib]
name="librunaway"
path="src/lib/mod.rs"