[package]
name = "orchestra-cli"
version = "0.0.2"
authors = ["Alexandre Péré <alexandre.pere@protonmail.com>"]

[dependencies]
log = "0.3"
pretty_logger = "0.1"
actix = "0.7"
actix-web = "0.7"
handlebars = "1.0"
regex = "1"
futures = "0.1"
clap="2.31"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.38"
liborchestra = { path = "../liborchestra"}