[package]
name = "runaway-cli"
version = "0.2.0"
authors = ["Alexandre Péré <alexandre.pere@protonmail.com>"]
edition = "2018"

[profile.release]
debug = true


[dependencies]
clap="2.31"
yaml-rust="0.4"
chrono="0.4"
dirs = "2.0"
ctrlc = "3.1.3"
uuid = { version = "0.6", features = ["v4"] }
futures-preview = "=0.3.0-alpha.19"
itertools = "0.8.0"
rand = "0.7"
lazy_static="1.4.0"
tracing = "0.1.10"
tracing-subscriber = "0.1.5"
tracing-attributes = "0.1.5"
tracing-futures = {version = "0.1.0", features=["futures-preview"]}
openssl-probe = "0.1.2"
liborchestra = { path = "../liborchestra"}
